crates/service/tests/completion/snapshots/features__completion__cont__resume_throw_following_int.snap
---
source: crates/service/tests/completion/cont.rs
expression: response
---
[
  {
    "label": "$arr",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 21
        },
        "end": {
          "line": 6,
          "character": 22
        }
      },
      "newText": "$arr"
    }
  },
  {
    "label": "$ft1",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 21
        },
        "end": {
          "line": 6,
          "character": 22
        }
      },
      "newText": "$ft1"
    }
  },
  {
    "label": "$ct1",
    "labelDetails": {
      "detail": "(cont)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 21
        },
        "end": {
          "line": 6,
          "character": 22
        }
      },
      "newText": "$ct1"
    }
  },
  {
    "label": "3",
    "labelDetails": {
      "detail": "(cont)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 21
        },
        "end": {
          "line": 6,
          "character": 22
        }
      },
      "newText": "3"
    }
  }
]
